# LinAlg

./: README.md  matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
.cache/clangd/index/: matrix.hpp.1C9C138ABDEC7EA6.idx  matrix_constructor.cpp.797A957F9F06F5FC.idx  vector.hpp.033AF3ECA411F161.idx  vector_constructor.cpp.746A97F5C9667CDF.idx  vector_operations.cpp.AA0B7276A5097A99.idx
src/: matrix.h  matrix.hpp  vector.cpp  vector.h  vector.hpp
test/: CMakeLists.txt  a.out  main.cpp  matrix_constructor.cpp  vector2d_constructor_test.cpp  vector_constructor.cpp  vector_constructor_test.cpp  vector_operations.cpp  vector_operations_test.cpp  vector_test.cpp
